syntax = "proto3";

package common.v1;
option go_package = "tsu-self/internal/rpc/generated/common";

import "google/protobuf/timestamp.proto";

// ===== 通用用户信息 =====
message UserInfo {
  string id = 1;                               // 用户ID
  string username = 2;                         // 用户名
  string email = 3;                            // 邮箱
  bool is_premium = 4;                         // 是否为高级用户
  int32 diamond_count = 5;                     // 钻石数量
  google.protobuf.Timestamp created_at = 6;    // 创建时间
  google.protobuf.Timestamp updated_at = 7;    // 更新时间
  map<string, string> traits = 8;             // Kratos 用户特征
}

// ===== 分页信息 =====
message Pagination {
  int32 page = 1;         // 当前页码
  int32 page_size = 2;    // 每页大小
  int64 total = 3;        // 总记录数
  int32 total_pages = 4;  // 总页数
}

// ===== 通用响应状态 =====
message Status {
  int32 code = 1;         // 状态码
  string message = 2;     // 状态消息
}

// ===== 权限相关 =====
message CheckPermissionRequest {
  string user_id = 1;     // 用户ID
  string resource = 2;    // 资源
  string action = 3;      // 操作
  string namespace = 4;   // 命名空间
}

message CheckPermissionResponse {
  bool allowed = 1;       // 是否允许
  string error_message = 2; // 错误信息
}

// ===== 角色管理 =====
message AssignRoleRequest {
  string user_id = 1;     // 用户ID
  string role = 2;        // 角色
  string namespace = 3;   // 命名空间
}

message AssignRoleResponse {
  bool success = 1;       // 是否成功
  string error_message = 2; // 错误信息
}

message RevokeRoleRequest {
  string user_id = 1;     // 用户ID
  string role = 2;        // 角色
  string namespace = 3;   // 命名空间
}

message RevokeRoleResponse {
  bool success = 1;       // 是否成功
  string error_message = 2; // 错误信息
}

message CreateRoleRequest {
  string role = 1;        // 角色名称
  string namespace = 2;   // 命名空间
  repeated string permissions = 3; // 权限列表
}

message CreateRoleResponse {
  bool success = 1;       // 是否成功
  string error_message = 2; // 错误信息
}